# obsidian-curricula

./: PRD.md  README.md  costs.jsonl  description.txt  manifest.json  package.json  progress.txt  ralph.sh
.github/workflows/: ci.yml  release.yml
docling-service/: README.md  com.user.auto-tutor.docling.plist  extract.py  install.sh  pyproject.toml  uninstall.sh  watch.py
evidence/harness/: README.md  package-lock.json  package.json
evidence/harness/src/: record.js  viewports.js
evidence/ralph/20260417T130803Z-smoke-test/: index.html  manifest.json
mock-vault/: .gitignore
mock-vault-empty/.obsidian/plugins/: obsidian-auto-tutor
mock-vault/2-Markdown_Sources/: intro-to-ml.md  linear-algebra-primer.md
plugin/: .eslintrc.json  esbuild.config.mjs  main.ts  manifest.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
plugin/src/: constants.ts  interfaces.ts  plugin.ts  settings.ts
plugin/src/prompts/: index.ts  stage0-taxonomy.md  stage1-concepts.md  stage3-curriculum.md  stage4-lesson.md
plugin/src/services/: cache.ts  context.ts  lock.ts  openrouter.ts  validator.ts
plugin/src/stages/: stage0-topic.ts  stage1-concepts.ts  stage2-diagnostic.ts  stage3-curriculum.ts  stage4-generate.ts
plugin/src/ui/: conflict-modal.ts  likert-modal.ts  progress-view.ts  responsive.ts  resume-modal.ts  syllabus-editor-view.ts  taxonomy-view.ts  topic-input-modal.ts
plugin/src/writers/: canvas.ts  frontmatter.ts  markdown.ts  moc.ts  navigation.ts
plugin/tests/: helpers.ts
scripts/: install-plugin.sh  setup-mock-vault.sh  verify.sh
(+20 files in other folders)
