[project]
name = "auto-tutor-docling"
version = "0.1.0"
description = "Mac-side document parser for Obsidian Curricula plugin"
requires-python = ">=3.11"
dependencies = [
    "docling>=2.0.0",
    "watchdog>=4.0.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
extract = "extract:main"
watch = "watch:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"